--- a/Car_Price.ipynb
+++ b/Car_Price.ipynb
@@ -6,7 +6,7 @@
       "name": "Car Price.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/beatricexc/Car-Price-Pred-/blob/main/Car_Price.ipynb",
-      "authorship_tag": "ABX9TyMuIyh6DU3v76RxOeqyV0Ju",
+      "authorship_tag": "ABX9TyMXwslJ6EFicQRRMVU0GmiE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "ioWaPAuyTd4X"
       },
@@ -59,7 +59,7 @@
         "id": "dRXDY7BuTytA",
         "outputId": "e852e0b9-53ac-4202-9183-135771da04db"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +360,7 @@
         "id": "mkpXb15DUT4s",
         "outputId": "e04736d8-e5b4-4406-8241-02fa3c6ec3ba"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +387,7 @@
         "id": "HzRG3GToUW_I",
         "outputId": "2bcc7026-36a4-4936-d47a-8def720ffd6b"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +714,7 @@
         "id": "PoRT2uwIUkQH",
         "outputId": "e68e2c51-660b-4ebd-f6d3-648f2402d8fb"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,7 +775,7 @@
         "id": "1PmfxUDSUqv-",
         "outputId": "e23b06e4-1341-403f-c192-4bc05bb1f944"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1076,7 @@
         "id": "gSbpVvu5XiDX",
         "outputId": "64004604-6cce-4215-b62e-dca74f635c96"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1117,7 +1117,7 @@
         "id": "RJs9BGLrXsyZ",
         "outputId": "d6d74f98-9dcb-4d5c-efb3-8442e42651ae"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1148,7 +1148,7 @@
         "id": "QoXxqgwYYxvh",
         "outputId": "bed3b649-9ac0-4d9a-a1a1-118eeddbef2c"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1305,7 @@
         "id": "D-kK5szoY7wk",
         "outputId": "e8d12e49-26dd-45b8-cb41-f3e02170402f"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,7 +1350,7 @@
         "id": "Goz21I7-Y_wA",
         "outputId": "59a6b0a0-3a16-4277-8703-0d76dc7fc24d"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1378,7 +1378,7 @@
         "id": "ia0Z6B5CZbsJ",
         "outputId": "59c1d2f2-9ada-4a66-cca6-f3bd1f1dc76c"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1430,7 +1430,7 @@
         "id": "r7VUlnME178K",
         "outputId": "36301509-6aeb-424d-92f0-34ca0ab9f05b"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1480,7 +1480,7 @@
         "id": "44d_3Flo4uhK",
         "outputId": "cf58ccb2-d3a8-46ff-8976-bbc4b68cb428"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1524,7 +1524,7 @@
         "id": "pa0OMLL9GJ8a",
         "outputId": "21054473-e578-42f2-f5de-09eede43cc0c"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1608,7 +1608,7 @@
           "height": 683
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1664,7 +1664,7 @@
           "height": 1000
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1707,7 +1707,7 @@
           "height": 604
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1742,7 +1742,7 @@
           "height": 875
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1806,7 +1806,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1829,7 +1829,7 @@
       "metadata": {
         "id": "BoBv4HVIlHaI"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1853,7 +1853,7 @@
           "height": 299
         }
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2165,7 +2165,7 @@
           "height": 422
         }
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2208,7 +2208,7 @@
           "height": 360
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2240,6 +2240,31 @@
       ],
       "metadata": {
         "id": "j5GVLOaC5tIn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "List of important vaiables:\n",
+        "\n",
+        "- Car Range \n",
+        "- Engine Type \n",
+        "- Fuel type \n",
+        "- Car Body \n",
+        "- Aspiration \n",
+        "- Cylinder Number \n",
+        "- Drivewheel \n",
+        "- Curbweight \n",
+        "- Car Length\n",
+        "- Car width\n",
+        "- Engine Size \n",
+        "- Boreratio \n",
+        "- Horse Power \n",
+        "- Wheel base \n",
+        "- Fuel Economy "
+      ],
+      "metadata": {
+        "id": "o9zOrx1EgYSa"
       }
     }
   ]
