--- a/Car_Price.ipynb
+++ b/Car_Price.ipynb
@@ -6,7 +6,7 @@
       "name": "Car Price.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/beatricexc/Car-Price-Pred-/blob/main/Car_Price.ipynb",
-      "authorship_tag": "ABX9TyPShlKVZcg+2XDfTJnci3LY",
+      "authorship_tag": "ABX9TyNaFAyJ9ujsIRpKpBkW+ibi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ioWaPAuyTd4X"
       },
@@ -59,7 +59,7 @@
         "id": "dRXDY7BuTytA",
         "outputId": "e1c716c6-2ac4-431f-bed4-457dc538a0f3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +360,7 @@
         "id": "mkpXb15DUT4s",
         "outputId": "2ed4328c-6b20-48ca-e6f8-cb6c5bafcaf0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +387,7 @@
         "id": "HzRG3GToUW_I",
         "outputId": "907af76c-f9f8-4195-85bc-9b97f2cf56bc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,7 +714,7 @@
         "id": "PoRT2uwIUkQH",
         "outputId": "49adc4a8-8a41-401e-d124-4bee9c455f5a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,7 +775,7 @@
         "id": "1PmfxUDSUqv-",
         "outputId": "3ff6ff3a-b18f-47aa-f74d-b8d8ac589818"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1076,7 @@
         "id": "gSbpVvu5XiDX",
         "outputId": "ea220f7e-d947-4cd1-c606-6ca372d59e28"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1117,7 +1117,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1148,7 +1148,7 @@
         "id": "QoXxqgwYYxvh",
         "outputId": "2997b8b0-2b6c-4074-d1f7-810f37b4a393"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1305,7 @@
         "id": "D-kK5szoY7wk",
         "outputId": "8290e851-b601-4e0b-94e4-601c14ac2c5f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,7 +1350,7 @@
         "id": "Goz21I7-Y_wA",
         "outputId": "11981a09-897b-4e10-c261-d724903e4e34"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1378,7 +1378,7 @@
         "id": "ia0Z6B5CZbsJ",
         "outputId": "5982cad0-a978-4f09-ae96-94e4346b06ea"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1430,7 +1430,7 @@
         "id": "r7VUlnME178K",
         "outputId": "c767eb08-b8d3-4b38-fe4d-90cabac3524e"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1480,7 +1480,7 @@
         "id": "44d_3Flo4uhK",
         "outputId": "4f817fa3-b998-4784-919f-99c818dd0671"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1524,7 +1524,7 @@
         "id": "pa0OMLL9GJ8a",
         "outputId": "e713092d-0c30-4d94-874e-eed42749eb5d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1608,7 +1608,7 @@
           "height": 683
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1664,7 +1664,7 @@
           "height": 1000
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1707,7 +1707,7 @@
           "height": 604
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1742,7 +1742,7 @@
           "height": 875
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1806,7 +1806,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1829,7 +1829,7 @@
       "metadata": {
         "id": "BoBv4HVIlHaI"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1853,7 +1853,7 @@
           "height": 299
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2165,7 +2165,7 @@
           "height": 421
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2208,7 +2208,7 @@
           "height": 359
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2283,7 +2283,7 @@
           "height": 270
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2546,7 +2546,7 @@
           "height": 992
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2584,7 +2584,7 @@
       "metadata": {
         "id": "cEg1ugA2uns0"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2600,7 +2600,7 @@
           "height": 299
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2894,7 +2894,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2907,6 +2907,22 @@
           "execution_count": 29
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train Test split and feature scaling\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "np.random.seed(0)\n",
+        "df_train, df_test = train_test_split(cars_lr, train_size = 0.7, test_size = 0.3, random_state = 100)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "El-uC5U0jSlJ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
