--- a/Car_Price.ipynb
+++ b/Car_Price.ipynb
@@ -6,7 +6,7 @@
       "name": "Car Price.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/beatricexc/Car-Price-Pred-/blob/main/Car_Price.ipynb",
-      "authorship_tag": "ABX9TyMtviLvqCuLqr9qBdqoZ7vB",
+      "authorship_tag": "ABX9TyMQWywx2JdoEUVrtivMZhjs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ioWaPAuyTd4X"
       },
@@ -59,7 +59,7 @@
         "id": "dRXDY7BuTytA",
         "outputId": "f086a7c4-8501-4b22-c8b7-602597962bb2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -775,7 +775,7 @@
         "id": "1PmfxUDSUqv-",
         "outputId": "10b9951c-d830-494e-e451-4bc31ede0509"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1076,7 +1076,7 @@
         "id": "gSbpVvu5XiDX",
         "outputId": "5e39366a-1b1b-4edb-dd00-46727be7475c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1148,7 +1148,7 @@
         "id": "QoXxqgwYYxvh",
         "outputId": "76d48acd-ca1b-4f20-8f8b-45b17ad6f871"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1305,7 @@
         "id": "D-kK5szoY7wk",
         "outputId": "374fb4b3-c51e-4fcc-994d-388b75f6b3a6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,7 +1350,7 @@
         "id": "Goz21I7-Y_wA",
         "outputId": "7662b236-5760-4b4d-acdd-9e226225864a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1378,7 +1378,7 @@
         "id": "ia0Z6B5CZbsJ",
         "outputId": "8d85df5a-c951-4eec-b4df-30bc888d05f1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1430,7 +1430,7 @@
         "id": "r7VUlnME178K",
         "outputId": "7eb94252-daa1-42bc-c17e-2bb1dfe63938"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1480,7 +1480,7 @@
         "id": "44d_3Flo4uhK",
         "outputId": "d4618808-404a-4404-cd5d-86abde21f765"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1608,7 +1608,7 @@
           "height": 683
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1707,7 +1707,7 @@
           "height": 604
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1742,7 +1742,7 @@
           "height": 875
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1806,7 +1806,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1829,7 +1829,7 @@
       "metadata": {
         "id": "BoBv4HVIlHaI"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1853,7 +1853,7 @@
           "height": 299
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2165,7 +2165,7 @@
           "height": 421
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2208,7 +2208,7 @@
           "height": 359
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2283,7 +2283,7 @@
           "height": 270
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2584,7 +2584,7 @@
       "metadata": {
         "id": "cEg1ugA2uns0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2600,7 +2600,7 @@
           "height": 299
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2894,7 +2894,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2921,7 +2921,7 @@
       "metadata": {
         "id": "El-uC5U0jSlJ"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2936,7 +2936,18 @@
       "metadata": {
         "id": "LQfHBH2uk8gI"
       },
-      "execution_count": 24,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train.head()"
+      ],
+      "metadata": {
+        "id": "pfhy5vYusv9J"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
