--- a/Car_Price.ipynb
+++ b/Car_Price.ipynb
@@ -2945,10 +2945,294 @@
         "df_train.head()"
       ],
       "metadata": {
-        "id": "pfhy5vYusv9J"
+        "id": "pfhy5vYusv9J",
+        "outputId": "0e32dbe2-60b0-419f-ddb8-2edd3e0f4136",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 299
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "        price  wheelbase  curbweight  enginesize  boreratio  horsepower  \\\n",
+              "122  0.068818   0.244828    0.272692    0.139623   0.230159    0.083333   \n",
+              "125  0.466890   0.272414    0.500388    0.339623   1.000000    0.395833   \n",
+              "166  0.122110   0.272414    0.314973    0.139623   0.444444    0.266667   \n",
+              "1    0.314446   0.068966    0.411171    0.260377   0.626984    0.262500   \n",
+              "199  0.382131   0.610345    0.647401    0.260377   0.746032    0.475000   \n",
+              "\n",
+              "     fueleconomy  carlength  carwidth  gas  ...  ohcv  rotor  five  four  six  \\\n",
+              "122     0.530864   0.426016  0.291667    1  ...     0      0     0     1    0   \n",
+              "125     0.213992   0.452033  0.666667    1  ...     0      0     0     1    0   \n",
+              "166     0.344307   0.448780  0.308333    1  ...     0      0     0     1    0   \n",
+              "1       0.244170   0.450407  0.316667    1  ...     0      0     0     1    0   \n",
+              "199     0.122085   0.775610  0.575000    1  ...     0      0     0     1    0   \n",
+              "\n",
+              "     three  twelve  two  Medium  Highend  \n",
+              "122      0       0    0       0        0  \n",
+              "125      0       0    0       0        1  \n",
+              "166      0       0    0       0        0  \n",
+              "1        0       0    0       1        0  \n",
+              "199      0       0    0       1        0  \n",
+              "\n",
+              "[5 rows x 31 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-36f3d458-74f5-4114-993b-b3f25e2bd1a4\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>price</th>\n",
+              "      <th>wheelbase</th>\n",
+              "      <th>curbweight</th>\n",
+              "      <th>enginesize</th>\n",
+              "      <th>boreratio</th>\n",
+              "      <th>horsepower</th>\n",
+              "      <th>fueleconomy</th>\n",
+              "      <th>carlength</th>\n",
+              "      <th>carwidth</th>\n",
+              "      <th>gas</th>\n",
+              "      <th>...</th>\n",
+              "      <th>ohcv</th>\n",
+              "      <th>rotor</th>\n",
+              "      <th>five</th>\n",
+              "      <th>four</th>\n",
+              "      <th>six</th>\n",
+              "      <th>three</th>\n",
+              "      <th>twelve</th>\n",
+              "      <th>two</th>\n",
+              "      <th>Medium</th>\n",
+              "      <th>Highend</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>122</th>\n",
+              "      <td>0.068818</td>\n",
+              "      <td>0.244828</td>\n",
+              "      <td>0.272692</td>\n",
+              "      <td>0.139623</td>\n",
+              "      <td>0.230159</td>\n",
+              "      <td>0.083333</td>\n",
+              "      <td>0.530864</td>\n",
+              "      <td>0.426016</td>\n",
+              "      <td>0.291667</td>\n",
+              "      <td>1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>125</th>\n",
+              "      <td>0.466890</td>\n",
+              "      <td>0.272414</td>\n",
+              "      <td>0.500388</td>\n",
+              "      <td>0.339623</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.395833</td>\n",
+              "      <td>0.213992</td>\n",
+              "      <td>0.452033</td>\n",
+              "      <td>0.666667</td>\n",
+              "      <td>1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>166</th>\n",
+              "      <td>0.122110</td>\n",
+              "      <td>0.272414</td>\n",
+              "      <td>0.314973</td>\n",
+              "      <td>0.139623</td>\n",
+              "      <td>0.444444</td>\n",
+              "      <td>0.266667</td>\n",
+              "      <td>0.344307</td>\n",
+              "      <td>0.448780</td>\n",
+              "      <td>0.308333</td>\n",
+              "      <td>1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.314446</td>\n",
+              "      <td>0.068966</td>\n",
+              "      <td>0.411171</td>\n",
+              "      <td>0.260377</td>\n",
+              "      <td>0.626984</td>\n",
+              "      <td>0.262500</td>\n",
+              "      <td>0.244170</td>\n",
+              "      <td>0.450407</td>\n",
+              "      <td>0.316667</td>\n",
+              "      <td>1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>199</th>\n",
+              "      <td>0.382131</td>\n",
+              "      <td>0.610345</td>\n",
+              "      <td>0.647401</td>\n",
+              "      <td>0.260377</td>\n",
+              "      <td>0.746032</td>\n",
+              "      <td>0.475000</td>\n",
+              "      <td>0.122085</td>\n",
+              "      <td>0.775610</td>\n",
+              "      <td>0.575000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 31 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-36f3d458-74f5-4114-993b-b3f25e2bd1a4')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-36f3d458-74f5-4114-993b-b3f25e2bd1a4 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-36f3d458-74f5-4114-993b-b3f25e2bd1a4');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     }
   ]
 }
